--- a/practice/kropp-fintness/index.html
+++ b/practice/kropp-fintness/index.html
@@ -68,61 +68,120 @@
                     </ul>
                </div>
           </section>
-    <section class="motivation">
-      <h2 class="visually-hidden">Motivation</h2>
-      <ul class="motivation-list">
-        <li class="motivation-item">
-          <div class="motivation-card container">
-            <div class="motivation-card-body">
-              <h3
-                class="motivation-card-title backdrop-title title-medium"
-                data-title="Strong"
-              >
-                Be you, just stronger!<br/>
-                Power is in you
-              </h3>
-              <div class="motivation-card-description">
-                <p>Unum solum justo ex ius. Pro cu probo laboramus eius insolens euripidis te eos, ut agam tota.</p>
-              </div>
-              <a class="motivation-card-button button transparent" href="/">
-                View more
-              </a>
-            </div>
-            <img
-              class="motivation-card-image"
-              src="./images/motivation/1.jpg"
-              alt="A man pulling himself up on a horizontal bar"
-              width="518" height="760" loading="lazy"
-            />
-          </div>
-        </li>
-        <li class="motivation-item">
-          <div class="motivation-card container">
-            <div class="motivation-card-body">
-              <h3
-                class="motivation-card-title backdrop-title title-medium"
-                data-title="Start"
-              >
-                Today is the best<br/>
-                day to start!
-              </h3>
-              <div class="motivation-card-description">
-                <p>Sed abhorreant constituam consectetuer eu. At mei clita deserunt, his movet molestie nemore.</p>
-              </div>
-              <a class="motivation-card-button button transparent" href="/">
-                View more
-              </a>
-            </div>
-            <img
-              class="motivation-card-image"
-              src="./images/motivation/2.jpg"
-              alt="Man with dumbbells"
-              width="518" height="760" loading="lazy"
-            />
-          </div>
-        </li>
-      </ul>
-    </section>
+          <section class="motivation">
+            <h2 class="visually-hidden">Motivation</h2>
+            <ul class="motivation-list">
+              <li class="motivation-item">
+                <div class="motivation-card container">
+                  <div class="motivation-card-body">
+                    <h3
+                      class="motivation-card-title backdrop-title title-medium"
+                      data-title="Strong"
+                    >
+                      Be you, just stronger!<br/>
+                      Power is in you
+                    </h3>
+                    <div class="motivation-card-description">
+                      <p>Unum solum justo ex ius. Pro cu probo laboramus eius insolens euripidis te eos, ut agam tota.</p>
+                    </div>
+                    <a class="motivation-card-button button transparent" href="/">
+                      View more
+                    </a>
+                  </div>
+                  <img
+                    class="motivation-card-image"
+                    src="./images/motivation/1.jpg"
+                    alt="A man pulling himself up on a horizontal bar"
+                    width="518" height="760" loading="lazy"
+                  />
+                </div>
+              </li>
+              <li class="motivation-item">
+                <div class="motivation-card container">
+                  <div class="motivation-card-body">
+                    <h3
+                      class="motivation-card-title backdrop-title title-medium"
+                      data-title="Start"
+                    >
+                      Today is the best<br/>
+                      day to start!
+                    </h3>
+                    <div class="motivation-card-description">
+                      <p>Sed abhorreant constituam consectetuer eu. At mei clita deserunt, his movet molestie nemore.</p>
+                    </div>
+                    <a class="motivation-card-button button transparent" href="/">
+                      View more
+                    </a>
+                  </div>
+                  <img
+                    class="motivation-card-image"
+                    src="./images/motivation/2.jpg"
+                    alt="Man with dumbbells"
+                    width="518" height="760" loading="lazy"
+                  />
+                </div>
+              </li>
+            </ul>
+          </section>
+          <section class="training-types">
+               <h2 class="visually-hidden">Types of training</h2>
+               <ul class="training-types-list">
+                    <li class="training-types-item">
+                         <img src="./icons/training-types/1.svg" alt="" class="training-types-image" width="150" height="140" loading="lazy">
+                         <h3 class="training-types-item-title">Maxpump</h3>
+                    </li>
+                                        <li class="training-types-item">
+                         <img src="./icons/training-types/2.svg" alt="" class="training-types-image" width="150" height="140" loading="lazy">
+                         <h3 class="training-types-item-title">aron gym</h3>
+                    </li>
+                                        <li class="training-types-item">
+                         <img src="./icons/training-types/3.svg" alt="" class="training-types-image" width="150" height="140" loading="lazy">
+                         <h3 class="training-types-item-title">fit & tone</h3>
+                    </li>
+                                        <li class="training-types-item">
+                         <img src="./icons/training-types/4.svg" alt="" class="training-types-image" width="150" height="140" loading="lazy">
+                         <h3 class="training-types-item-title">forza</h3>
+                    </li>
+                                        <li class="training-types-item">
+                         <img src="./icons/training-types/5.svg" alt="" class="training-types-image" width="150" height="140" loading="lazy">
+                         <h3 class="training-types-item-title">balance fitness</h3>
+                    </li>
+                                        <li class="training-types-item">
+                         <img src="./icons/training-types/6.svg" alt="" class="training-types-image" width="150" height="140" loading="lazy">
+                         <h3 class="training-types-item-title">body sculpt</h3>
+                    </li>
+               </ul>
+          </section>
+          <section class="join-us">
+               <div class="join-us-video-wrapper">
+                    <video src="" class="join-us-video" width="960" height="600" poster="./images/video-placeholder.jpg"></video>
+                    <button class="join-us-video-play-button" type="button">Play</button>
+               </div>
+               <div class="join-us-body container">
+                    <h2 class="join-us-title">Join us</h2>
+                    <form class="join-us-form">
+                         <header class="join-us-form-header">
+                              <h3 class="join-us-form-title backdrop-title centered title-big" data-title="Go!">Start here</h3>
+                              <div class="join-us-form-subtitle">
+                                   fill the form below to start your journey
+                              </div>
+                         </header>
+                         <div class="join-us-form-body">
+                              <label class="visually-hidden" for="username">
+                                   Name
+                              </label>
+                              <input class="join-us-form-input input" id="username" placeholder="Name"></input>
+                              <label class="visually-hidden" for="email">
+                                   Email
+                              </label>
+                              <input class="join-us-form-input input" id="email" placeholder="Email" type="email"></input>
+                              <button class="join-us-form-button button transparent" type="submit">
+                                   subscribe
+                              </button>
+                         </div>
+                    </form>
+               </div>
+          </section>
      </main>
 
 </body>
