--- a/practice/kropp-fintness/index.html
+++ b/practice/kropp-fintness/index.html
@@ -123,7 +123,7 @@
               </li>
             </ul>
           </section>
-          <section class="training-types">
+          <section class="training-types container-wide">
                <h2 class="visually-hidden">Types of training</h2>
                <ul class="training-types-list">
                     <li class="training-types-item">
@@ -162,7 +162,7 @@
                     <form class="join-us-form">
                          <header class="join-us-form-header">
                               <h3 class="join-us-form-title backdrop-title centered title-big" data-title="Go!">Start here</h3>
-                              <div class="join-us-form-subtitle">
+                              <div class="join-us-form-subtitle section-description">
                                    fill the form below to start your journey
                               </div>
                          </header>
@@ -182,6 +182,60 @@
                     </form>
                </div>
           </section>
+          <section class="location container-wide">
+               <img src="./images/map.jpg" alt="Branches on the map" class="location-map-image" width="960" height="600">
+               <div class="location-body">
+                    <h2 class="location-title title-medium backdrop-title centered" data-title="Look">Find us near you</h2>
+                    <div class="location-description"><p>Nec suas signiferumque id. An eum labore commodo principes. Usu diam noluisse cu, nam adipisci</p></div>
+                    <a href="#" class="location-button button transparent">View more</a>
+
+               </div>
+          </section>
+           <section class="family">
+      <header class="family-header container">
+        <h2
+          class="family-title title-big backdrop-title centered"
+          data-title="Part"
+        >
+          Be a part of our fit family
+        </h2>
+        <div class="family-description section-description">
+          <p>Training helps you think and feel better. join us!</p>
+        </div>
+      </header>
+      <div class="family-body container-wide">
+        <img
+          class="family-image"
+          src="./images/family/1.jpg"
+          alt="Training people"
+          width="414" height="479" loading="lazy"
+        />
+        <img
+          class="family-image"
+          src="./images/family/2.jpg"
+          alt="Training people"
+          width="744" height="479" loading="lazy"
+        />
+        <img
+          class="family-image"
+          src="./images/family/3.jpg"
+          alt="Training people"
+          width="396" height="479" loading="lazy"
+        />
+        <img
+          class="family-image"
+          src="./images/family/4.jpg"
+          alt="Training people"
+          width="396" height="479" loading="lazy"
+        />
+        <img
+          class="family-image"
+          src="./images/family/5.jpg"
+          alt="Training people"
+          width="414" height="479" loading="lazy"
+        />
+      </div>
+    </section>
      </main>
 
 </body>
