--- a/learning/just_js/js_help.html
+++ b/learning/just_js/js_help.html
@@ -4,8 +4,12 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>JS Learning</title>
+     <!-- links -->
+     <link rel="stylesheet" href="./js_help.css">
 </head>
 <body>
 
+
+     <script src="./learning.js"></script>
 </body>
 </html>
