add: gitignore + fix: scss files

--- a/learning/just_js/html/js_learning.html
+++ b/learning/just_js/html/js_learning.html
@@ -3,13 +3,13 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>JS Learning</title>
+     <title>JS | Learning</title>
      <!-- links -->
-     <link rel="stylesheet" href="./js_help.css">
+     <link rel="stylesheet" href="../css/js_learning.css">
 </head>
 <body>
+     <a href="./js_pracrice.html">JS practice</a>
 
-
-     <script src="./learning.js"></script>
+     <script src="../js/learning.js" defer></script>
 </body>
 </html>
