--- a/learning/just_js/js_help.html
+++ b/learning/just_js/js_help.html
@@ -10,6 +10,7 @@
 <body>
 
 
-     <script src="./learning.js"></script>
+     <!-- <script src="./learning.js"></script> -->
+      <script src="./practice.js"></script>
 </body>
 </html>
