--- a/learning/just_js/html/js_pracrice.html
+++ b/learning/just_js/html/js_pracrice.html
@@ -4,12 +4,11 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>JS | Practice</title>
+   <!-- links -->
    <link rel="stylesheet" href="../css/js_learning.css">
 </head>
 <body>
-     <a href="./js_learning.html">JS learning</a>
-
-
+   <a href="./js_learning.html">JS learning</a>
    <script src="../js/practice.js"></script>
 </body>
 </html>
