--- a/learning/just_js/html/js_learning.html
+++ b/learning/just_js/html/js_learning.html
@@ -8,7 +8,19 @@
    <link rel="stylesheet" href="../css/js_learning.css">
 </head>
 <body>
-   <a href="./js_pracrice.html">JS practice</a>
+   <style>
+      body {
+         display: flex;
+         justify-content: center;
+      }
+
+      .link{
+         font-size: 24px;
+         text-decoration: dashed underline;
+         color: lightseagreen;
+      }
+   </style>
+   <a href="./js_pracrice.html" class="link">-> JS | Practice <-</a>
    <script src="../js/learning.js" defer></script>
 </body>
 </html>
