--- a/learning/just_js/html/js_pracrice.html
+++ b/learning/just_js/html/js_pracrice.html
@@ -8,7 +8,19 @@
    <link rel="stylesheet" href="../css/js_learning.css">
 </head>
 <body>
-   <a href="./js_learning.html">JS learning</a>
-   <script src="../js/practice.js"></script>
+   <style>
+      body {
+         display: flex;
+         justify-content: center;
+      }
+
+      .link{
+         font-size: 24px;
+         text-decoration: dashed underline;
+         color: lightcoral;
+      }
+   </style>
+   <a href="./js_learning.html" class="link">-> JS | Learning <-</a>
+   <script src="../js/practice.js" defer></script>
 </body>
 </html>
