update: structure changes

--- a/learning/just_js/html/js_learning.html
+++ b/learning/just_js/html/js_learning.html
@@ -4,23 +4,14 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>JS | Learning</title>
-   <!-- links -->
-   <link rel="stylesheet" href="../css/js_learning.css">
+   <link rel="stylesheet" href="../css/stylesforjs.css">
 </head>
 <body>
-   <style>
-      body {
-         display: flex;
-         justify-content: center;
-      }
+   <a href="./js_pracrice.html" class="practice-link">JS | Practice</a>
 
-      .link{
-         font-size: 24px;
-         text-decoration: dashed underline;
-         color: lightseagreen;
-      }
-   </style>
-   <a href="./js_pracrice.html" class="link">-> JS | Practice <-</a>
-   <script src="../js/learning.js" defer></script>
+   <!-- links -->
+   <!-- <script src="../js/learning/basic.js" defer></script> -->
+   <!-- <script src="../js/learning/functions.js" defer></script> -->
+   <script src="../js/learning/object.js" defer></script>
 </body>
 </html>
