--- a/learning/just_js/html/js_pracrice.html
+++ b/learning/just_js/html/js_pracrice.html
@@ -5,22 +5,10 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>JS | Practice</title>
    <!-- links -->
-   <link rel="stylesheet" href="../css/js_learning.css">
+   <link rel="stylesheet" href="../css/stylesforjs.css">
 </head>
 <body>
-   <style>
-      body {
-         display: flex;
-         justify-content: center;
-      }
-
-      .link{
-         font-size: 24px;
-         text-decoration: dashed underline;
-         color: lightcoral;
-      }
-   </style>
-   <a href="./js_learning.html" class="link">-> JS | Learning <-</a>
+   <a href="./js_learning.html" class="learning-link">JS | Learning</a>
    <script src="../js/practice.js" defer></script>
 </body>
 </html>
