js: script link update

--- a/learning/just_js/html/js_pracrice.html
+++ b/learning/just_js/html/js_pracrice.html
@@ -9,6 +9,8 @@
 </head>
 <body>
    <a href="./js_learning.html" class="learning-link">JS | Learning</a>
-   <script src="../js/practice.js" defer></script>
+
+   <!-- links -->
+   <script src="../js/practice/objects.js" defer></script>
 </body>
 </html>
