update: structure changes

--- a/learning/just_js/html/js_learning.html
+++ b/learning/just_js/html/js_learning.html
@@ -10,8 +10,9 @@
    <a href="./js_pracrice.html" class="practice-link">JS | Practice</a>
 
    <!-- links -->
+    
    <!-- <script src="../js/learning/basic.js" defer></script> -->
    <!-- <script src="../js/learning/functions.js" defer></script> -->
-   <script src="../js/learning/object.js" defer></script>
+   <script src="../js/learning/objects.js" defer></script>
 </body>
 </html>
