js: add this & some math methods

--- a/learning/just_js/html/js_learning.html
+++ b/learning/just_js/html/js_learning.html
@@ -13,6 +13,7 @@
     
    <!-- <script src="../js/learning/basic.js" defer></script> -->
    <!-- <script src="../js/learning/functions.js" defer></script> -->
-   <script src="../js/learning/objects.js" defer></script>
+   <!-- <script src="../js/learning/objects.js" defer></script> -->
+    <script src="../js/learning/other.js"></script>
 </body>
 </html>
