--- a/learning/just_js/html/js_pracrice.html
+++ b/learning/just_js/html/js_pracrice.html
@@ -11,6 +11,8 @@
    <a href="./js_learning.html" class="learning-link">JS | Learning</a>
 
    <!-- links -->
-   <script src="../js/practice/objects.js" defer></script>
+
+   <!-- <script src="../js/practice/objects.js" defer></script> -->
+    <script src="../js/practice/other.js"></script>
 </body>
 </html>
