--- a/training/index.html
+++ b/training/index.html
@@ -1,51 +1,15 @@
-<!DOCTYPE html>
-<html lang="ru">
-
+<!doctype html>
+<html lang="en">
 <head>
-   <meta charset="UTF-8">
-   <title></title>
-   <style>
-   </style>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>JS | Learning</title>
 </head>
-
 <body>
-   <style>
-      .circle {
-         position: absolute;
-         width: 0;
-         height: 0;
-         border-radius: 50%;
-         background: red;
-         transition: width 2s, height 2s;
-         left: 50%;
-         top: 50%;
-         transform: translate(-50%, -50%);
-      }
+    <div id="log"></div>
 
-      .circle.grow {
-         width: 200px;
-         height: 200px;
-      }
-
-      .message-ball {
-         background: yellow;
-         color: black;
-         padding: 10px;
-         border-radius: 10px;
-         text-align: center;
-         font-weight: bold;
-      }
-
-      #log {
-         margin-top: 20px;
-         font-family: monospace;
-         line-height: 1.5;
-      }
-   </style>
-   
-   <h1></h1>
-   <div id="log"></div>
-   <script src="./index.js"></script>
+    <script src="index.js"></script>
 </body>
-
 </html>
