js: arrays #1/2 done!

--- a/learning/just_js/html/js_pracrice.html
+++ b/learning/just_js/html/js_pracrice.html
@@ -12,7 +12,9 @@
 
    <!-- links -->
 
-   <!-- <script src="../js/practice/objects.js" defer></script> -->
-    <script src="../js/practice/other.js"></script>
+<!--    <script src="../js/practice/objects.js" defer></script> -->
+<!--    <script src="../js/practice/other.js" defer></script>-->
+   <script src="../js/practice/arrays.js"></script>
+
 </body>
 </html>
