--- a/learning/just_js/html/js_learning.html
+++ b/learning/just_js/html/js_learning.html
@@ -11,9 +11,11 @@
 
     <!-- links -->
     
-    <!-- <script src="../js/learning/basic.js" defer></script> -->
-    <!-- <script src="../js/learning/functions.js" defer></script> -->
-    <!-- <script src="../js/learning/objects.js" defer></script> -->
-    <script src="../js/learning/other.js"></script>
+<!--     <script src="../js/learning/basic.js" defer></script> -->
+<!--     <script src="../js/learning/functions.js" defer></script> -->
+<!--     <script src="../js/learning/objects.js" defer></script> -->
+<!--    <script src="../js/learning/other.js"></script>-->
+		<script src="../js/learning/arrays.js"></script>
+
 </body>
 </html>
