--- a/learning/just_js/html/js_learning.html
+++ b/learning/just_js/html/js_learning.html
@@ -10,12 +10,7 @@
 		<a href="./js_pracrice.html" class="practice-link">JS | Practice</a>
 
     <!-- links -->
-    
-<!--     <script src="../js/learning/basic.js" defer></script> -->
-<!--     <script src="../js/learning/functions.js" defer></script> -->
-<!--     <script src="../js/learning/objects.js" defer></script> -->
-<!--    <script src="../js/learning/other.js"></script>-->
-		<script src="../js/learning/arrays.js"></script>
+		<script src='../js/learning/other.js'></script>
 
 </body>
 </html>
