js: class in js start

--- a/learning/just_js/html/js_learning.html
+++ b/learning/just_js/html/js_learning.html
@@ -10,7 +10,7 @@
 		<a href="./js_pracrice.html" class="practice-link">JS | Practice</a>
 
     <!-- links -->
-		<script src='../js/learning/other.js'></script>
+		<script src='../js/learning/class.js'></script>
 
 </body>
 </html>
