--- a/learning/just_js/html/js_pracrice.html
+++ b/learning/just_js/html/js_pracrice.html
@@ -11,7 +11,7 @@
    <a href="./js_learning.html" class="learning-link">JS | Learning</a>
 
    <!-- links -->
-   <script src='../js/practice/other.js'></script>
+   <script src='../js/practice/class.js'></script>
 
 </body>
 </html>
